<resources>
    <string name="app_name">JLibraryDemo</string>
    <string name="app_crash">程序异常退出，正在重启！</string>

    <string name="home">主页</string>
    <string name="hot">热播</string>
    <string name="catagory">精品</string>
    <string name="mine">我的</string>
    <string name="feedback">意见投诉</string>
    <string name="cache">清除缓存</string>
    <string name="about_us">关于我们</string>
    <string name="user">用户协议</string>
    <string name="hot_groom">热播推荐</string>

    <color name="light_gray">#cccaca</color>

    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="login_success">Success</string>
    <string name="login_failed">Failed</string>

    <string name="share_element">Share Element Transition</string>
    <string name="share_element_tv">Share Element Transition Msg</string>

</resources>
